Fix layout issue where buttons could not be clicked due to wrong z-index

--- a/app/assets/css/ms-admin.css
+++ b/app/assets/css/ms-admin.css
@@ -1518,6 +1518,7 @@
 #wpwrap .ms-wrap .ms-membership-add .ms-control-fields-wrapper {
   position: absolute;
   bottom: -60px;
+  z-index: 10;
 }
 
 /* Page: Payment options */
