--- a/app/assets/css/sass/_page_membership.scss
+++ b/app/assets/css/sass/_page_membership.scss
@@ -231,6 +231,7 @@
 		.ms-control-fields-wrapper {
 			position: absolute;
 			bottom: -60px;
+			z-index: 10;
 		}
 	}
 }
